--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "mjolnir-simulator-client",
   "version": "1.0.0",
   "description": "the client app for the sim.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
