--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "the client app for the sim.",
   "main": "src/index.js",
   "scripts": {
-    "start": "./node_modules/.bin/http-server . -p 1337",
+    "start": "http-server . -p 1337",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
