--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "description": "the server app for the sim.",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "4.15.4",
+    "ws": "3.2.0"
   }
 }
