--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "mjolnir-simulator-server",
   "version": "1.0.0",
   "description": "the server app for the sim.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
