--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,19 @@
   "main": "src/index.js",
   "scripts": {
     "start": "http-server . -p 1337",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "http-server": "^0.10.0"
+  },
+  "devDependencies": {
+    "jasmine": "^2.8.0",
+    "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-spec-reporter": "0.0.32"
   }
 }
